# flask-mediaserv

./: .gitignore  README.md  docker-compose.yaml
api/: app.py  pyproject.toml  requirements.txt
api/blueprints/: files.py
api/migrations/versions/: 0f3357cc5e52_.py  1a12baf6de4d_.py  2f06ee37acb1_.py  45776d9cc554_.py  4727ecaab928_.py  88c4de219c7f_.py  9b9caa6dd6ef_.py  c4ef08b4f1ae_.py  d8654f636771_.py  dea34f9c3041_.py
api/models/: user.py
api/src/mediaserv/: app.py
api/src/mediaserv/blueprints/: albums.py  api.py  files.py
api/src/mediaserv/mediaserv/: scanner.py
api/src/mediaserv/models/: __init__.py  album.py  artist.py  scan.py  track.py
api/tests/: test_files.py
ui/: nuxt.config.js  package.json
ui/pages/: albums.vue  files.vue  playback.vue
