[project]
name = 'mediaserv'
version = '0.1.0'
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]

[build-system]
requires = [
    'setuptools >=42',
    'setuptools_scm[toml] >=3.4',
    'wheel',
]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
